force-app/main/default/objects/abd_Fee_Schedule_Global__c/abd_Fee_Schedule_Global__c.object-meta.xml
<CustomObject>
    <description>Global object to store License fee information</description>
    <label>Fee Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>