force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_ABD_Dollars__c.field-meta.xml
<CustomField>
    <fullName>abd_ABD_Dollars__c</fullName>
    <formula>abd_Fee_Amount__c - abd_Local_Authority_Dollars__c + abd_Surcharge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABD Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>