force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>abd_Account_Code__c</fullName>
    <label>Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>