force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Dues_Member_Number_Min__c.field-meta.xml
<CustomField>
    <fullName>abd_Dues_Member_Number_Min__c</fullName>
    <label>Dues Member Number_Min</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>