force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Length__c</fullName>
    <label>Length</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>