force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Local_Authority_Dollars__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_Dollars__c</fullName>
    <formula>abd_Fee_Amount__c * abd_Local_Authority_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Authority Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>