force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Local_Authority_Percent__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_Percent__c</fullName>
    <label>Local Authority %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>