force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_No_Fee_With_Primary_License_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_No_Fee_With_Primary_License_Type__c</fullName>
    <label>No Fee With Primary License Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>