force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Population_Max__c.field-meta.xml
<CustomField>
    <fullName>abd_Population_Max__c</fullName>
    <label>Population Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>