force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Premise_Vehicles_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Vehicles_Type__c</fullName>
    <label>Premise Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Premises_Vehicle_Type</valueSetName>
    </valueSet>
</CustomField>