force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Square_Footage_Min__c.field-meta.xml
<CustomField>
    <fullName>abd_Square_Footage_Min__c</fullName>
    <label>Square Footage Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>