force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>abd_Surcharge_Amount__c</fullName>
    <label>Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>