force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/abd_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>abd_Total_Fees__c</fullName>
    <formula>abd_ABD_Dollars__c +  abd_Local_Authority_Dollars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>