force-app/main/default/objects/abd_Fee_Schedule_Global__c/fields/Privilege__c.field-meta.xml
<CustomField>
    <fullName>Privilege__c</fullName>
    <label>Privilege</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brew Pub</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>High Proof Brew Pub</fullName>
            </value>
            <value>
                <fullName>Living Quarters</fullName>
            </value>
            <value>
                <fullName>Outdoor Service</fullName>
            </value>
            <value>
                <fullName>Sunday Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>