force-app/main/default/objects/abd_Fee_Schedule_Global__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_Length__c</columns>
    <columns>abd_Total_Fees__c</columns>
    <columns>abd_License_Type__c</columns>
    <columns>abd_Sunday_Fees__c</columns>
    <columns>Other_Criteria__c</columns>
    <columns>abd_Square_Footage_Min__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>